# odbcuite

./: .gitignore  .sdd-effective-to-report.md  LICENSE  README.md  SESSION_LOG.md  ns_token.py  ns_utils.py  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
tests/: test_get_secret.py  test_scd2_effective_to.py
